--- a/views/login.html
+++ b/views/login.html
@@ -39,7 +39,7 @@
                 <input type="password" class="form-control" placeholder="mot de passe " required="" />
               </div>
               <div>
-                <a class="btn btn-default submit" href="plain_page.html">Connexion</a>
+                <a class="btn btn-default submit" href="home.html">Connexion</a>
               </div>
 
               <div class="clearfix"></div>
