--- a/views/conges.html
+++ b/views/conges.html
@@ -55,7 +55,7 @@
                         </thead>
                         <tbody>
                           <tr>
-                            <td>Diarhée</td>
+                            <td>Congé maladie</td>
                             <td>15/03/2016</td>
                             <td>19/05/2016</td>
                             <td>Invalidé Cs</td>
