--- a/views/home.html
+++ b/views/home.html
@@ -20,127 +20,41 @@
 
     <!-- Custom Theme Style -->
     <link href="../build/css/custom.min.css" rel="stylesheet">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
      <script>
 
-         function firstToUpperCase(str) {
-           return str.substr(0, 1).toUpperCase() + str.substr(1);
-         }
 
-         function loadCalendar() {
-           $('#pageInterne').load('calendar.html');
-         }
+        function loadCalendar() {
+            $('#pageInterne').load('calendar.html');
+        }
 
-         function loadCreateMission() {
-           $('#pageInterne').load('creer_mission.html');
-         }
+        function loadDemandeConge() {
+            $('#pageInterne').load('demandeConge.html ');
+        }
 
-         function loadAdminMainView() {
-           $('#pageInterne').load('adminMainView.html');
-           // Collaborateurs
-           $.get("/collaborateurs?role=1", function (data) {
+        function loadDemandeNFrais() {
+            $('#pageInterne').load('demandeNFrais.html');
+        }
 
-             var collaborateurs = JSON.parse(data).data;
-             collaborateurs.forEach(function (element) {
-               $("#liste-collaborateurs").append('<tr>' +
-                       ' <td>' + firstToUpperCase(element.nom.toLowerCase()) + '</td>' +
-                       '<td>' + firstToUpperCase(element.prenom.toLowerCase()) + '</td>' +
-                       '<td>' + element.service.nom + '</td>' +
-                       '<td>' + element.mail + '</td>' +
-                       '<td>' + element.telephone + '</td>' +
-                       '<td>' +
-                       '<button class="btn-danger btn"><span class="fa fa-trash"></span></button>' +
-                       '<button class="btn-warning btn"><span class="fa fa-pencil"></span></button>' +
-                       '</td>' +
-                       '</tr>');
-               drawTables("#collaborateur",true,loadAjoutCollab);
-             });
-           });
-           // Chefs de service
-           $.get("/collaborateurs?role=2", function (data) {
+        function loadNFraisDetail() {
+            $('#pageInterne').load('notes_de_frais.html');
+        }
 
-             var chefsservice = JSON.parse(data).data;
-             chefsservice.forEach(function (element) {
-               $("#liste-chefs-service").append('<tr>' +
-                       ' <td>' + firstToUpperCase(element.nom.toLowerCase()) + '</td>' +
-                       '<td>' + firstToUpperCase(element.prenom.toLowerCase()) + '</td>' +
-                       '<td>' + element.service.nom + '</td>' +
-                       '<td>' + element.mail + '</td>' +
-                       '<td>' + element.telephone + '</td>' +
-                       '<td>' +
-                       '<button class="btn-danger btn"><span class="fa fa-trash"></span></button>' +
-                       '<button class="btn-warning btn"><span class="fa fa-pencil"></span></button>' +
-                       '</td>' +
-                       '</tr>');
-               drawTables("#chef",false,loadAjoutCollab);
-             });
-
-           });
-           $.get("/selectservices", function (data) {
-             var services = JSON.parse(data).data;
-             services.forEach(function (element) {
-               $("#liste-service").append('   <tr>'+
-                       '<td>'+element.nom+'</td>'+
-                       '<td></td>'+
-                       '<td></td>'+
-                       '<td>'+
-                       '<button class="btn-danger btn"><span class="fa fa-trash"></span></button>'+
-                       '<button class="btn-warning btn"><span class="fa fa-pencil"></span></button>'+
-                       '</td>'+
-                       '</tr>');
-             });
-             drawTables("#service",true,loadAjoutService);
-           });
-
-         }
-
-         function loadDemandeConge() {
-           $('#pageInterne').load('demandeConge.html ');
-         }
-
-         function loadDemandeNFrais() {
-           $('#pageInterne').load('demandeNFrais.html');
-         }
-
-         function loadNFraisDetail() {
-           $('#pageInterne').load('notes_de_frais.html');
-         }
-
-         function loadCongesDetail() {
-           $('#pageInterne').load('conges.html');
-         }
+        function loadCongesDetail() {
+            $('#pageInterne').load('conges.html');
+        }
 
 
-         function loadDemandeAvance() {
-           $('#pageInterne').load('demandeAvance.html');
-         }
+        function loadDemandeAvance() {
+            $('#pageInterne').load('demandeAvance.html');
+        }
 
-         function loadAjoutCollab() {
-           $('#pageInterne').load('adminAjoutCollab.html');
-           $.get("/selectroles", function (data) {
-             var roles = JSON.parse(data).data;
-             roles.forEach(function (element) {
-               $("#collaborateur-liste-role").append('<option value="' + element.id + '">' + element.nom + '</option>');
-             });
+        function loadAjoutCollab() {
+            $('#pageInterne').load('adminAjoutCollab.html');
+        }
 
-           });
-
-           $.get("/selectservices", function (data) {
-             var services = JSON.parse(data).data;
-             services.forEach(function (element) {
-               $("#collaborateur-liste-service").append('<option value="' + element.id + '">' + element.nom + '</option>');
-             });
-
-           });
-
-         }
-
-         function loadAjoutService() {
-           $('#pageInterne').load('adminAjoutService.html');
-         }
-
+        function loadAjoutService() {
+            $('#pageInterne').load('adminAjoutService.html');
+        }
 
 
     </script>
@@ -169,7 +83,7 @@
               </div>
               <div class="profile_info">
                 <span>Bonjour,</span>
-                <h2 class="profile-name"></h2>
+                <h2>Thomas Duprez</h2>
               </div>
               <div class="clearfix"></div>
             </div>
@@ -195,13 +109,7 @@
                       <li><a>Mes notes de Frais</a></li>
                       <li><a onclick="loadNFraisDetail()">En detail</a></li>
                       <li><a onclick="loadDemandeNFrais()"> Nouvelle demande</a></li>
-                    </ul>
-                  </li>
-
-                  <li><a><i class="fa fa-university"></i> Mission <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li  onclick="loadCreateMission()"><a>Nouvelle mission </a></li>
-                      <!-- <li><a>Nouvelle demande</a></li> -->
+                      <li><a onclick="loadDemandeAvance()"> Demande d'avances</a></li>
                     </ul>
                   </li>
 
@@ -217,13 +125,12 @@
 
 <!-- Hide si ce n'est pas admin ou CS ou… -->
 <br/><br/>
-            <h3 class="admin-view"><i class="fa fa-gears"></i>Menu Admin </h3>
-                <ul  class="nav side-menu admin-view">
-                   <li><a onclick = "loadAdminMainView()">Vue principale</a></li>
+            <h3><i class="fa fa-gears"></i>Menu Admin </h3>
+                <ul class="nav side-menu">
+
 
                   <li><a><i class="fa fa-users"></i> Personnels <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-
                       <li><a onclick = "loadAjoutCollab()">ajouter un personnel</a></li>
                     </ul>
                   </li>
@@ -253,7 +160,7 @@
               <a data-toggle="tooltip" data-placement="top" title="Lock">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="Logout" href="/logout">
+              <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
@@ -272,7 +179,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="../images/user.png" alt=""><label class="profile-name"></label>
+                    <img src="../images/user.png" alt="">Thomas Duprez
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -284,7 +191,7 @@
                       </a>
                     </li>
                     <li><a href="javascript:;">Help</a></li>
-                    <li><a href="/logout"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
 
@@ -436,31 +343,5 @@
 
     <script src="../build/js/custom.js"></script>
 
-
-  <script type="text/javascript">
-
-    $(document).ready(function () {
-      $('.admin-view').each(function(){
-        $( this ).hide();
-      })
-      function firstToUpperCase( str ) {
-        return str.substr(0, 1).toUpperCase() + str.substr(1);
-      }
-
-      $.get("/name", function(data, status){
-          var profile = JSON.parse(data);
-          $('.profile-name').each(function() {
-            $(this).html(firstToUpperCase(profile.prenom.toLowerCase()) + " " + firstToUpperCase(profile.nom.toLowerCase()));
-            //console.log(JSON.stringify(profile));
-          });
-          if(profile.admin == true) {
-            $('.admin-view').each(function() {
-              $(this).show();
-            });
-          }
-      });
-        //alert("Data: " + data + "\nStatus: " + status);
-    });
-  </script>
   </body>
 </html>
